# ai_wasei3

./: .gitignore  README.md  generate_batch.sh  main.py  pyproject.toml
src/my_project/: counterpoint.py  harmony.py  lilypond_writer.py  main.py  main_counterpoint.py  model.py  sequence_generator.py  state_sample.py  util.py
src/my_project/counterpoint/: all_measure_validator.py  context.py  global_context.py  global_state.py  local_measure_context.py  local_measure_state.py  main.py  model.py  search_common.py  search_end_note.py  search_harmonic_note.py  search_neighbor_tone.py  search_passing_tone.py  search_start_note.py  state.py  util.py  validator.py
tests/: test_counterpoint.py  test_harmony.py  test_lilypond_writer.py  test_model.py  test_util.py
tests/counterpoint/: test_counterpoint.py
