[project]
name = "ai-wasei3"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
    "mypy",
    "snakeviz",
]

[tool.ruff]
src = ["src"]
line-length = 120

include = ["*.py", "*.pyi", "**/pyproject.toml"]
exclude = [".venv"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "RUF"]
task-tags = ["TODO", "FIXME", "XXX", "NOTE"]

[tool.ruff.lint.pycodestyle]
# cf. https://docs.astral.sh/ruff/rules/line-too-long/
# cf. https://docs.astral.sh/ruff/settings/#lint_pycodestyle_ignore-overlong-task-comments
ignore-overlong-task-comments = true

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
mypy_path = "src"

strict = true
ignore_missing_imports = true
pretty = true
